--- a/work-details.html
+++ b/work-details.html
@@ -9,31 +9,31 @@
     <meta name="description" content="Agench is an elegant design, 100% responsive Bootstrap 5 template. It is best for agency websites and marketing companies.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 
     <!-- CSS
 	============================================ -->
 
     <!-- Vendor CSS (Bootstrap & Icon Font) -->
-    <link rel="stylesheet" href="assets/css/vendor/font-awesome-pro.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/pe-icon-7-stroke.css">
-    <link rel="stylesheet" href="assets/css/vendor/muli-font.css">
+    <link rel="stylesheet" href="css/vendor/font-awesome-pro.min.css">
+    <link rel="stylesheet" href="css/vendor/pe-icon-7-stroke.css">
+    <link rel="stylesheet" href="css/vendor/muli-font.css">
 
     <!-- Plugins CSS (All Plugins Files) -->
     
-    <link rel="stylesheet" href="assets/css/plugins/swiper.min.css">
-    <link rel="stylesheet" href="assets/css/plugins/animate.css">
-    <link rel="stylesheet" href="assets/css/plugins/aos.min.css">
-    <link rel="stylesheet" href="assets/css/plugins/magnific-popup.css">
+    <link rel="stylesheet" href="css/plugins/swiper.min.css">
+    <link rel="stylesheet" href="css/plugins/animate.css">
+    <link rel="stylesheet" href="css/plugins/aos.min.css">
+    <link rel="stylesheet" href="css/plugins/magnific-popup.css">
     
 
     <!-- Main Style CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-    <!-- <link rel="stylesheet" href="assets/css/vendor/vendor.min.css">
-    <link rel="stylesheet" href="assets/css/plugins/plugins.min.css">
-    <link rel="stylesheet" href="assets/css/style.min.css"> -->
+    <!-- <link rel="stylesheet" href="css/vendor/vendor.min.css">
+    <link rel="stylesheet" href="css/plugins/plugins.min.css">
+    <link rel="stylesheet" href="css/style.min.css"> -->
 
 </head>
 
@@ -50,8 +50,8 @@
                         <div class="col-xl-2 col-auto order-0">
                             <div class="header-logo">
                                 <a href="index.html">
-                                    <img class="dark-logo" src="assets/images/logo/light-logo.png" alt="Agency Logo">
-                                    <img class="light-logo" src="assets/images/logo/light-logo.png" alt="Agency Logo">
+                                    <img class="dark-logo" src="images/logo/light-logo.png" alt="Agency Logo">
+                                    <img class="light-logo" src="images/logo/light-logo.png" alt="Agency Logo">
                                 </a>
                             </div>
                         </div>
@@ -148,7 +148,7 @@
         <!-- Main Search End -->
 
         <!-- Page Title Section Start -->
-        <div class="page-title-section section section-padding-top" data-overlay="0.7" data-bg-image="assets/images/bg/breadcrumb-bg-two.jpg">
+        <div class="page-title-section section section-padding-top" data-overlay="0.7" data-bg-image="images/bg/breadcrumb-bg-two.jpg">
             <div class="page-title">
                 <div class="container">
                     <h1 class="title">We work with bold brands that we believe in</h1>
@@ -251,7 +251,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="custom-column-thumbnail mt-lg-14 mt-10" data-aos="fade-up">
-                            <img class="w-100" src="assets/images/work-details/work-details-1.png" alt="Agency">
+                            <img class="w-100" src="images/work-details/work-details-1.png" alt="Agency">
                         </div>
                     </div>
                 </div>
@@ -285,18 +285,18 @@
                     <div class="row mb-n6">
                         <div class="col-lg-6 col-md-6 col-12">
                             <div class="thumbnail" data-aos="fade-up">
-                                <img class="w-100" src="assets/images/work-details/work-details-3.png" alt="Agency">
+                                <img class="w-100" src="images/work-details/work-details-3.png" alt="Agency">
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-12 mt-lg-0 mt-md-0 mt-10">
                             <div class="thumbnail" data-aos="fade-up">
-                                <img class="w-100" src="assets/images/work-details/work-details-4.png" alt="Agency">
+                                <img class="w-100" src="images/work-details/work-details-4.png" alt="Agency">
                             </div>
                         </div>
 
                         <div class="col-lg-12 my-6">
                             <div class="thumbnail" data-aos="fade-up">
-                                <img class="w-100" src="assets/images/work-details/work-details-2.png" alt="Agency">
+                                <img class="w-100" src="images/work-details/work-details-2.png" alt="Agency">
                             </div>
                         </div>
                     </div>
@@ -318,7 +318,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-12 col-12 mb-6">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="index.html"><img src="assets/images/logo/footer-logo.png" alt="Agency Logo"></a>
+                                <a href="index.html"><img src="images/logo/footer-logo.png" alt="Agency Logo"></a>
                             </div>
                             <div class="footer-widget-content">
                                 <div class="content">
@@ -427,7 +427,7 @@
         <div class="site-main-mobile-menu-inner">
             <div class="mobile-menu-header">
                 <div class="mobile-menu-logo">
-                    <a href="index.html"><img src="assets/images/logo/light-logo.png" alt=""></a>
+                    <a href="index.html"><img src="images/logo/light-logo.png" alt=""></a>
                 </div>
                 <div class="mobile-menu-close">
                     <button class="toggle">
@@ -477,31 +477,31 @@
 ============================================ -->
 
     <!-- Vendors JS -->
-    <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
-    <script src="assets/js/vendor/jquery-3.4.1.min.js"></script>
-    <script src="assets/js/vendor/jquery-migrate-3.1.0.min.js"></script>
-    <script src="assets/js/vendor/bootstrap.bundle.min.js"></script>
+    <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="js/vendor/jquery-3.4.1.min.js"></script>
+    <script src="js/vendor/jquery-migrate-3.1.0.min.js"></script>
+    <script src="js/vendor/bootstrap.bundle.min.js"></script>
 
     <!-- Plugins JS -->
-    <script src="assets/js/plugins/aos.min.js"></script>
-    <script src="assets/js/plugins/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/plugins/isotope.pkgd.min.js"></script>
-    <script src="assets/js/plugins/parallax.min.js"></script>
-    <script src="assets/js/plugins/jquery.ajaxchimp.min.js"></script>
-    <script src="assets/js/plugins/jquery.counterup.min.js"></script>
-    <script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/plugins/svg-inject.min.js"></script>
-    <script src="assets/js/plugins/swiper.min.js"></script>
-    <script src="assets/js/plugins/vanilla-tilt.min.js"></script>
-    <script src="assets/js/plugins/vivus.min.js"></script>
-    <script src="assets/js/plugins/waypoints.min.js"></script>
+    <script src="js/plugins/aos.min.js"></script>
+    <script src="js/plugins/imagesloaded.pkgd.min.js"></script>
+    <script src="js/plugins/isotope.pkgd.min.js"></script>
+    <script src="js/plugins/parallax.min.js"></script>
+    <script src="js/plugins/jquery.ajaxchimp.min.js"></script>
+    <script src="js/plugins/jquery.counterup.min.js"></script>
+    <script src="js/plugins/jquery.magnific-popup.min.js"></script>
+    <script src="js/plugins/svg-inject.min.js"></script>
+    <script src="js/plugins/swiper.min.js"></script>
+    <script src="js/plugins/vanilla-tilt.min.js"></script>
+    <script src="js/plugins/vivus.min.js"></script>
+    <script src="js/plugins/waypoints.min.js"></script>
 
     <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-    <!-- <script src="assets/js/vendor/vendor.min.js"></script>
-    <script src="assets/js/plugins/plugins.min.js"></script> -->
+    <!-- <script src="js/vendor/vendor.min.js"></script>
+    <script src="js/plugins/plugins.min.js"></script> -->
 
     <!-- Main Activation JS -->
-    <script src="assets/js/main.js"></script>
+    <script src="js/main.js"></script>
 
 
 
