--- a/about.html
+++ b/about.html
@@ -9,31 +9,31 @@
     <meta name="description" content="Agench is an elegant design, 100% responsive Bootstrap 5 template. It is best for agency websites and marketing companies.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 
     <!-- CSS
 	============================================ -->
 
     <!-- Vendor CSS (Bootstrap & Icon Font) -->
-    <link rel="stylesheet" href="assets/css/vendor/font-awesome-pro.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/pe-icon-7-stroke.css">
-    <link rel="stylesheet" href="assets/css/vendor/muli-font.css">
+    <link rel="stylesheet" href="css/vendor/font-awesome-pro.min.css">
+    <link rel="stylesheet" href="css/vendor/pe-icon-7-stroke.css">
+    <link rel="stylesheet" href="css/vendor/muli-font.css">
 
     <!-- Plugins CSS (All Plugins Files) -->
     
-    <link rel="stylesheet" href="assets/css/plugins/swiper.min.css">
-    <link rel="stylesheet" href="assets/css/plugins/animate.css">
-    <link rel="stylesheet" href="assets/css/plugins/aos.min.css">
-    <link rel="stylesheet" href="assets/css/plugins/magnific-popup.css">
+    <link rel="stylesheet" href="css/plugins/swiper.min.css">
+    <link rel="stylesheet" href="css/plugins/animate.css">
+    <link rel="stylesheet" href="css/plugins/aos.min.css">
+    <link rel="stylesheet" href="css/plugins/magnific-popup.css">
     
 
     <!-- Main Style CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-    <!-- <link rel="stylesheet" href="assets/css/vendor/vendor.min.css">
-    <link rel="stylesheet" href="assets/css/plugins/plugins.min.css">
-    <link rel="stylesheet" href="assets/css/style.min.css"> -->
+    <!-- <link rel="stylesheet" href="css/vendor/vendor.min.css">
+    <link rel="stylesheet" href="css/plugins/plugins.min.css">
+    <link rel="stylesheet" href="css/style.min.css"> -->
 
 </head>
 
@@ -50,8 +50,8 @@
                         <div class="col-xl-2 col-auto order-0">
                             <div class="header-logo">
                                 <a href="index.html">
-                                    <img class="dark-logo" src="assets/images/logo/light-logo.png" alt="Agency Logo">
-                                    <img class="light-logo" src="assets/images/logo/light-logo.png" alt="Agency Logo">
+                                    <img class="dark-logo" src="images/logo/light-logo.png" alt="Agency Logo">
+                                    <img class="light-logo" src="images/logo/light-logo.png" alt="Agency Logo">
                                 </a>
                             </div>
                         </div>
@@ -148,7 +148,7 @@
         <!-- Main Search End -->
 
         <!-- Page Title Section Start -->
-        <div class="page-title-section section section-padding-top" data-overlay="0.7" data-bg-image="assets/images/bg/breadcrumb-bg.jpg">
+        <div class="page-title-section section section-padding-top" data-overlay="0.7" data-bg-image="images/bg/breadcrumb-bg.jpg">
             <div class="page-title">
                 <div class="container">
                     <h1 class="title">We are an agency located in New York</h1>
@@ -212,14 +212,14 @@
                     <div class="col-xl-6 col-lg-6 col-12" data-aos="fade-up">
                         <div class="about-image-area about-shape-animation right-0 mr-0">
                             <div class="about-image js-tilt">
-                                <img src="assets/images/about/about-1.jpg" alt="">
+                                <img src="images/about/about-1.jpg" alt="">
                             </div>
                             <div class="about-image js-tilt">
-                                <img src="assets/images/about/about-2.jpg" alt="">
+                                <img src="images/about/about-2.jpg" alt="">
                             </div>
                             <!-- Animation Shape Start -->
                             <div class="shape shape-1 scene">
-                                <span data-depth="1"><img src="assets/images/shape-animation/video-shape-1.png" alt=""></span>
+                                <span data-depth="1"><img src="images/shape-animation/video-shape-1.png" alt=""></span>
                             </div>
                             <!-- Animation Shape End -->
                         </div>
@@ -234,7 +234,7 @@
         <!-- About Section End -->
 
         <!-- Video Section Start -->
-        <div class="video-section section section-padding-150" data-overlay="0.7" data-bg-image="assets/images/bg/video-bg.jpg">
+        <div class="video-section section section-padding-150" data-overlay="0.7" data-bg-image="images/bg/video-bg.jpg">
 
             <div class="container text-center">
 
@@ -250,7 +250,7 @@
             <!-- Animation Shape Start -->
             <div class="shape shape-1 scene">
                 <span data-depth="1">
-                    <img src="assets/images/shape-animation/newsletter-shape.png" alt="">
+                    <img src="images/shape-animation/newsletter-shape.png" alt="">
                 </span>
             </div>
             <!-- Animation Shape End -->
@@ -269,14 +269,14 @@
                     <div class="col-xl-7 col-lg-6 col-12" data-aos="fade-up">
                         <div class="about-image-area">
                             <div class="about-image js-tilt">
-                                <img src="assets/images/about/about-3.jpg" alt="">
+                                <img src="images/about/about-3.jpg" alt="">
                             </div>
                             <div class="about-image js-tilt">
-                                <img src="assets/images/about/about-4.jpg" alt="">
+                                <img src="images/about/about-4.jpg" alt="">
                             </div>
                             <!-- Animation Shape Start -->
                             <div class="shape shape-1 scene">
-                                <span data-depth="1"><img src="assets/images/shape-animation/about-shape-1.png" alt=""></span>
+                                <span data-depth="1"><img src="images/shape-animation/about-shape-1.png" alt=""></span>
                             </div>
                             <!-- Animation Shape End -->
                         </div>
@@ -326,7 +326,7 @@
                             <!-- Static Testimonial Start -->
                             <div class="static-testimonial mb-6">
                                 <div class="testimonial-image">
-                                    <img src="assets/images/testimonial/90/author-1.png" alt="">
+                                    <img src="images/testimonial/90/author-1.png" alt="">
                                 </div>
                                 <div class="testimonial-content">
                                     <p>We are completely satisfied with the quality of service that we get. Workers were respectful, efficient, accommodating, cleaned up thoroughly.</p>
@@ -345,7 +345,7 @@
                             <!-- Static Testimonial Start -->
                             <div class="static-testimonial mb-6">
                                 <div class="testimonial-image">
-                                    <img src="assets/images/testimonial/90/author-2.png" alt="">
+                                    <img src="images/testimonial/90/author-2.png" alt="">
                                 </div>
                                 <div class="testimonial-content">
                                     <p>We are completely satisfied with the quality of service that we get. Workers were respectful, efficient, accommodating, cleaned up thoroughly. </p>
@@ -364,7 +364,7 @@
                             <!-- Static Testimonial Start -->
                             <div class="static-testimonial mb-6">
                                 <div class="testimonial-image">
-                                    <img src="assets/images/testimonial/90/author-3.png" alt="">
+                                    <img src="images/testimonial/90/author-3.png" alt="">
                                 </div>
                                 <div class="testimonial-content">
                                     <p>We are completely satisfied with the quality of service that we get. Workers were respectful, efficient, accommodating, cleaned up thoroughly.</p>
@@ -383,7 +383,7 @@
                             <!-- Static Testimonial Start -->
                             <div class="static-testimonial mb-6">
                                 <div class="testimonial-image">
-                                    <img src="assets/images/testimonial/90/author-3.png" alt="">
+                                    <img src="images/testimonial/90/author-3.png" alt="">
                                 </div>
                                 <div class="testimonial-content">
                                     <p>I love their flexibility. Even when my request is too complicated to handle. they could still suggest something useful for me. </p>
@@ -421,47 +421,47 @@
                 <!-- Icon Animation Start -->
                 <div class="shape shape-1">
                     <span>
-                        <img src="assets/images/icon-animation/icon-1.png" alt="">
+                        <img src="images/icon-animation/icon-1.png" alt="">
                     </span>
                 </div>
                 <div class="shape shape-2">
                     <span>
-                        <img src="assets/images/icon-animation/icon-2.png" alt="">
+                        <img src="images/icon-animation/icon-2.png" alt="">
                     </span>
                 </div>
                 <div class="shape shape-3">
                     <span>
-                        <img src="assets/images/icon-animation/icon-3.png" alt="">
+                        <img src="images/icon-animation/icon-3.png" alt="">
                     </span>
                 </div>
                 <div class="shape shape-4">
                     <span>
-                        <img src="assets/images/icon-animation/icon-4.png" alt="">
+                        <img src="images/icon-animation/icon-4.png" alt="">
                     </span>
                 </div>
                 <div class="shape shape-5">
                     <span>
-                        <img src="assets/images/icon-animation/icon-5.png" alt="">
+                        <img src="images/icon-animation/icon-5.png" alt="">
                     </span>
                 </div>
                 <div class="shape shape-6">
                     <span>
-                        <img src="assets/images/icon-animation/icon-6.png" alt="">
+                        <img src="images/icon-animation/icon-6.png" alt="">
                     </span>
                 </div>
                 <div class="shape shape-7">
                     <span>
-                        <img src="assets/images/icon-animation/icon-7.png" alt="">
+                        <img src="images/icon-animation/icon-7.png" alt="">
                     </span>
                 </div>
                 <div class="shape shape-8">
                     <span>
-                        <img src="assets/images/icon-animation/icon-8.png" alt="">
+                        <img src="images/icon-animation/icon-8.png" alt="">
                     </span>
                 </div>
                 <div class="shape shape-9">
                     <span>
-                        <img src="assets/images/icon-animation/icon-9.png" alt="">
+                        <img src="images/icon-animation/icon-9.png" alt="">
                     </span>
                 </div>
                 <!-- Icon Animation End -->
@@ -479,7 +479,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-12 col-12 mb-6">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="index.html"><img src="assets/images/logo/footer-logo.png" alt="Agency Logo"></a>
+                                <a href="index.html"><img src="images/logo/footer-logo.png" alt="Agency Logo"></a>
                             </div>
                             <div class="footer-widget-content">
                                 <div class="content">
@@ -588,7 +588,7 @@
         <div class="site-main-mobile-menu-inner">
             <div class="mobile-menu-header">
                 <div class="mobile-menu-logo">
-                    <a href="index.html"><img src="assets/images/logo/light-logo.png" alt=""></a>
+                    <a href="index.html"><img src="images/logo/light-logo.png" alt=""></a>
                 </div>
                 <div class="mobile-menu-close">
                     <button class="toggle">
@@ -640,31 +640,31 @@
 ============================================ -->
 
     <!-- Vendors JS -->
-    <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
-    <script src="assets/js/vendor/jquery-3.4.1.min.js"></script>
-    <script src="assets/js/vendor/jquery-migrate-3.1.0.min.js"></script>
-    <script src="assets/js/vendor/bootstrap.bundle.min.js"></script>
+    <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="js/vendor/jquery-3.4.1.min.js"></script>
+    <script src="js/vendor/jquery-migrate-3.1.0.min.js"></script>
+    <script src="js/vendor/bootstrap.bundle.min.js"></script>
 
     <!-- Plugins JS -->
-    <script src="assets/js/plugins/aos.min.js"></script>
-    <script src="assets/js/plugins/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/plugins/isotope.pkgd.min.js"></script>
-    <script src="assets/js/plugins/parallax.min.js"></script>
-    <script src="assets/js/plugins/jquery.ajaxchimp.min.js"></script>
-    <script src="assets/js/plugins/jquery.counterup.min.js"></script>
-    <script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/plugins/svg-inject.min.js"></script>
-    <script src="assets/js/plugins/swiper.min.js"></script>
-    <script src="assets/js/plugins/vanilla-tilt.min.js"></script>
-    <script src="assets/js/plugins/vivus.min.js"></script>
-    <script src="assets/js/plugins/waypoints.min.js"></script>
+    <script src="js/plugins/aos.min.js"></script>
+    <script src="js/plugins/imagesloaded.pkgd.min.js"></script>
+    <script src="js/plugins/isotope.pkgd.min.js"></script>
+    <script src="js/plugins/parallax.min.js"></script>
+    <script src="js/plugins/jquery.ajaxchimp.min.js"></script>
+    <script src="js/plugins/jquery.counterup.min.js"></script>
+    <script src="js/plugins/jquery.magnific-popup.min.js"></script>
+    <script src="js/plugins/svg-inject.min.js"></script>
+    <script src="js/plugins/swiper.min.js"></script>
+    <script src="js/plugins/vanilla-tilt.min.js"></script>
+    <script src="js/plugins/vivus.min.js"></script>
+    <script src="js/plugins/waypoints.min.js"></script>
 
     <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-    <!-- <script src="assets/js/vendor/vendor.min.js"></script>
-    <script src="assets/js/plugins/plugins.min.js"></script> -->
+    <!-- <script src="js/vendor/vendor.min.js"></script>
+    <script src="js/plugins/plugins.min.js"></script> -->
 
     <!-- Main Activation JS -->
-    <script src="assets/js/main.js"></script>
+    <script src="js/main.js"></script>
 
 
 
