--- a/service.html
+++ b/service.html
@@ -9,31 +9,31 @@
     <meta name="description" content="Agench is an elegant design, 100% responsive Bootstrap 5 template. It is best for agency websites and marketing companies.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 
     <!-- CSS
 	============================================ -->
 
     <!-- Vendor CSS (Bootstrap & Icon Font) -->
-    <link rel="stylesheet" href="assets/css/vendor/font-awesome-pro.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/pe-icon-7-stroke.css">
-    <link rel="stylesheet" href="assets/css/vendor/muli-font.css">
+    <link rel="stylesheet" href="css/vendor/font-awesome-pro.min.css">
+    <link rel="stylesheet" href="css/vendor/pe-icon-7-stroke.css">
+    <link rel="stylesheet" href="css/vendor/muli-font.css">
 
     <!-- Plugins CSS (All Plugins Files) -->
     
-    <link rel="stylesheet" href="assets/css/plugins/swiper.min.css">
-    <link rel="stylesheet" href="assets/css/plugins/animate.css">
-    <link rel="stylesheet" href="assets/css/plugins/aos.min.css">
-    <link rel="stylesheet" href="assets/css/plugins/magnific-popup.css">
+    <link rel="stylesheet" href="css/plugins/swiper.min.css">
+    <link rel="stylesheet" href="css/plugins/animate.css">
+    <link rel="stylesheet" href="css/plugins/aos.min.css">
+    <link rel="stylesheet" href="css/plugins/magnific-popup.css">
     
 
     <!-- Main Style CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-    <!-- <link rel="stylesheet" href="assets/css/vendor/vendor.min.css">
-    <link rel="stylesheet" href="assets/css/plugins/plugins.min.css">
-    <link rel="stylesheet" href="assets/css/style.min.css"> -->
+    <!-- <link rel="stylesheet" href="css/vendor/vendor.min.css">
+    <link rel="stylesheet" href="css/plugins/plugins.min.css">
+    <link rel="stylesheet" href="css/style.min.css"> -->
 
 </head>
 
@@ -50,8 +50,8 @@
                         <div class="col-xl-2 col-auto order-0">
                             <div class="header-logo">
                                 <a href="index.html">
-                                    <img class="dark-logo" src="assets/images/logo/light-logo.png" alt="Agency Logo">
-                                    <img class="light-logo" src="assets/images/logo/light-logo.png" alt="Agency Logo">
+                                    <img class="dark-logo" src="images/logo/light-logo.png" alt="Agency Logo">
+                                    <img class="light-logo" src="images/logo/light-logo.png" alt="Agency Logo">
                                 </a>
                             </div>
                         </div>
@@ -148,7 +148,7 @@
         <!-- Main Search End -->
 
         <!-- Page Title Section Start -->
-        <div class="page-title-section section section-padding-top" data-overlay="0.7" data-bg-image="assets/images/bg/breadcrumb-bg-three.jpg">
+        <div class="page-title-section section section-padding-top" data-overlay="0.7" data-bg-image="images/bg/breadcrumb-bg-three.jpg">
             <div class="page-title">
                 <div class="container">
                     <h1 class="title">We work with bold brands that we believe in</h1>
@@ -183,7 +183,7 @@
                     <div class="col mb-6" data-aos="fade-up">
 
                         <div class="icon-box box-border text-center" data-vivus-hover>
-                            <div class="icon"><img class="svgInject" src="assets/images/svg/linea/linea-basic-target.svg" alt=""></div>
+                            <div class="icon"><img class="svgInject" src="images/svg/linea/linea-basic-target.svg" alt=""></div>
                             <div class="content">
                                 <h3 class="title">Branding</h3>
                                 <div class="desc">
@@ -201,7 +201,7 @@
                     <div class="col mb-6" data-aos="fade-up">
 
                         <div class="icon-box box-border text-center" data-vivus-hover>
-                            <div class="icon"><img class="svgInject" src="assets/images/svg/linea/linea-basic-gear.svg" alt=""></div>
+                            <div class="icon"><img class="svgInject" src="images/svg/linea/linea-basic-gear.svg" alt=""></div>
                             <div class="content">
                                 <h3 class="title">Development</h3>
                                 <div class="desc">
@@ -219,7 +219,7 @@
                     <div class="col mb-6" data-aos="fade-up">
 
                         <div class="icon-box box-border text-center" data-vivus-hover>
-                            <div class="icon"><img class="svgInject" src="assets/images/svg/linea/linea-basic-display.svg" alt=""></div>
+                            <div class="icon"><img class="svgInject" src="images/svg/linea/linea-basic-display.svg" alt=""></div>
                             <div class="content">
                                 <h3 class="title">Marketing</h3>
                                 <div class="desc">
@@ -237,7 +237,7 @@
                     <div class="col mb-6" data-aos="fade-up">
 
                         <div class="icon-box box-border text-center" data-vivus-hover>
-                            <div class="icon"><img class="svgInject" src="assets/images/svg/linea/linea-ecommerce-cart-plus.svg" alt=""></div>
+                            <div class="icon"><img class="svgInject" src="images/svg/linea/linea-ecommerce-cart-plus.svg" alt=""></div>
                             <div class="content">
                                 <h3 class="title">Ecommerce</h3>
                                 <div class="desc">
@@ -255,7 +255,7 @@
                     <div class="col mb-6" data-aos="fade-up">
 
                         <div class="icon-box box-border text-center" data-vivus-hover>
-                            <div class="icon"><img class="svgInject" src="assets/images/svg/linea/linea-basic-picture-multiple.svg" alt=""></div>
+                            <div class="icon"><img class="svgInject" src="images/svg/linea/linea-basic-picture-multiple.svg" alt=""></div>
                             <div class="content">
                                 <h3 class="title">UX Design</h3>
                                 <div class="desc">
@@ -273,7 +273,7 @@
                     <div class="col mb-6" data-aos="fade-up">
 
                         <div class="icon-box box-border text-center" data-vivus-hover>
-                            <div class="icon"><img class="svgInject" src="assets/images/svg/linea/linea-basic-picture.svg" alt=""></div>
+                            <div class="icon"><img class="svgInject" src="images/svg/linea/linea-basic-picture.svg" alt=""></div>
                             <div class="content">
                                 <h3 class="title">Strategy</h3>
                                 <div class="desc">
@@ -289,7 +289,7 @@
 
                     <!-- Animation Shape Start -->
                     <div class="shape shape-1 scene">
-                        <span data-depth="1"><img src="assets/images/shape-animation/video-shape-1.png" alt=""></span>
+                        <span data-depth="1"><img src="images/shape-animation/video-shape-1.png" alt=""></span>
                     </div>
                     <!-- Animation Shape End -->
 
@@ -362,14 +362,14 @@
                         <!-- Faq Image Start -->
                         <div class="about-image-area right-0 skill-image-area">
                             <div class="about-image js-tilt">
-                                <img src="assets/images/skill/skill-1.jpg" alt="">
+                                <img src="images/skill/skill-1.jpg" alt="">
                             </div>
                             <div class="about-image js-tilt">
-                                <img src="assets/images/skill/skill-2.jpg" alt="">
+                                <img src="images/skill/skill-2.jpg" alt="">
                             </div>
                             <!-- Animation Shape Start -->
                             <div class="shape shape-1 scene">
-                                <span data-depth="1"><img src="assets/images/shape-animation/video-shape-1.png" alt=""></span>
+                                <span data-depth="1"><img src="images/shape-animation/video-shape-1.png" alt=""></span>
                             </div>
                             <!-- Animation Shape End -->
                         </div>
@@ -392,14 +392,14 @@
                     <div class="col-xl-7 col-lg-6 col-12" data-aos="fade-up">
                         <div class="about-image-area">
                             <div class="about-image js-tilt">
-                                <img src="assets/images/about/about-5.jpg" alt="">
+                                <img src="images/about/about-5.jpg" alt="">
                             </div>
                             <div class="about-image js-tilt">
-                                <img src="assets/images/about/about-6.jpg" alt="">
+                                <img src="images/about/about-6.jpg" alt="">
                             </div>
                             <!-- Animation Shape Start -->
                             <div class="shape shape-1 scene">
-                                <span data-depth="1"><img src="assets/images/shape-animation/about-shape-1.png" alt=""></span>
+                                <span data-depth="1"><img src="images/shape-animation/about-shape-1.png" alt=""></span>
                             </div>
                             <!-- Animation Shape End -->
                         </div>
@@ -488,7 +488,7 @@
         <!-- Funfact Section End -->
 
         <!-- Contact Section Start -->
-        <div class="section section-padding contact-section" data-overlay="0.7" data-bg-image="assets/images/bg/contact-bg.jpg">
+        <div class="section section-padding contact-section" data-overlay="0.7" data-bg-image="images/bg/contact-bg.jpg">
 
             <div class="container">
                 <div class="row row-cols-lg-2 row-cols-1 align-items-center">
@@ -505,7 +505,7 @@
                             <!-- Contact Info Item Start -->
                             <div class="contact-info info-light" data-vivus-hover>
                                 <div class="icon">
-                                    <img class="svgInject" src="assets/images/svg/linea/linea-basic-map.svg" alt="">
+                                    <img class="svgInject" src="images/svg/linea/linea-basic-map.svg" alt="">
                                 </div>
                                 <div class="info">
                                     <h4 class="title">Our Locations</h4>
@@ -516,7 +516,7 @@
                             <!-- Contact Info Item Start -->
                             <div class="contact-info info-light" data-vivus-hover>
                                 <div class="icon">
-                                    <img class="svgInject" src="assets/images/svg/linea/linea-basic-message-txt.svg" alt="">
+                                    <img class="svgInject" src="images/svg/linea/linea-basic-message-txt.svg" alt="">
                                 </div>
                                 <div class="info">
                                     <h4 class="title">Give Us A Call</h4>
@@ -527,7 +527,7 @@
                             <!-- Contact Info Item Start -->
                             <div class="contact-info info-light" data-vivus-hover>
                                 <div class="icon">
-                                    <img class="svgInject" src="assets/images/svg/linea/linea-basic-mail-open-text.svg" alt="">
+                                    <img class="svgInject" src="images/svg/linea/linea-basic-mail-open-text.svg" alt="">
                                 </div>
                                 <div class="info">
                                     <h4 class="title"> Help Desk</h4>
@@ -572,7 +572,7 @@
                             <!-- Animation Shape Start -->
                             <div class="shape shape-1 scene">
                                 <span data-depth="1">
-                                    <img src="assets/images/shape-animation/contact-shape.png" alt="">
+                                    <img src="images/shape-animation/contact-shape.png" alt="">
                                 </span>
                             </div>
                             <!-- Animation Shape End -->
@@ -585,7 +585,7 @@
             <!-- Animation Shape Start -->
             <div class="shape shape-1 scene">
                 <span data-depth="1">
-                    <img src="assets/images/shape-animation/newsletter-shape.png" alt="">
+                    <img src="images/shape-animation/newsletter-shape.png" alt="">
                 </span>
             </div>
             <!-- Animation Shape End -->
@@ -603,7 +603,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-12 col-12 mb-6">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="index.html"><img src="assets/images/logo/footer-logo.png" alt="Agency Logo"></a>
+                                <a href="index.html"><img src="images/logo/footer-logo.png" alt="Agency Logo"></a>
                             </div>
                             <div class="footer-widget-content">
                                 <div class="content">
@@ -712,7 +712,7 @@
         <div class="site-main-mobile-menu-inner">
             <div class="mobile-menu-header">
                 <div class="mobile-menu-logo">
-                    <a href="index.html"><img src="assets/images/logo/light-logo.png" alt=""></a>
+                    <a href="index.html"><img src="images/logo/light-logo.png" alt=""></a>
                 </div>
                 <div class="mobile-menu-close">
                     <button class="toggle">
@@ -764,31 +764,31 @@
 ============================================ -->
 
     <!-- Vendors JS -->
-    <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
-    <script src="assets/js/vendor/jquery-3.4.1.min.js"></script>
-    <script src="assets/js/vendor/jquery-migrate-3.1.0.min.js"></script>
-    <script src="assets/js/vendor/bootstrap.bundle.min.js"></script>
+    <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="js/vendor/jquery-3.4.1.min.js"></script>
+    <script src="js/vendor/jquery-migrate-3.1.0.min.js"></script>
+    <script src="js/vendor/bootstrap.bundle.min.js"></script>
 
     <!-- Plugins JS -->
-    <script src="assets/js/plugins/aos.min.js"></script>
-    <script src="assets/js/plugins/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/plugins/isotope.pkgd.min.js"></script>
-    <script src="assets/js/plugins/parallax.min.js"></script>
-    <script src="assets/js/plugins/jquery.ajaxchimp.min.js"></script>
-    <script src="assets/js/plugins/jquery.counterup.min.js"></script>
-    <script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/plugins/svg-inject.min.js"></script>
-    <script src="assets/js/plugins/swiper.min.js"></script>
-    <script src="assets/js/plugins/vanilla-tilt.min.js"></script>
-    <script src="assets/js/plugins/vivus.min.js"></script>
-    <script src="assets/js/plugins/waypoints.min.js"></script>
+    <script src="js/plugins/aos.min.js"></script>
+    <script src="js/plugins/imagesloaded.pkgd.min.js"></script>
+    <script src="js/plugins/isotope.pkgd.min.js"></script>
+    <script src="js/plugins/parallax.min.js"></script>
+    <script src="js/plugins/jquery.ajaxchimp.min.js"></script>
+    <script src="js/plugins/jquery.counterup.min.js"></script>
+    <script src="js/plugins/jquery.magnific-popup.min.js"></script>
+    <script src="js/plugins/svg-inject.min.js"></script>
+    <script src="js/plugins/swiper.min.js"></script>
+    <script src="js/plugins/vanilla-tilt.min.js"></script>
+    <script src="js/plugins/vivus.min.js"></script>
+    <script src="js/plugins/waypoints.min.js"></script>
 
     <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-    <!-- <script src="assets/js/vendor/vendor.min.js"></script>
-    <script src="assets/js/plugins/plugins.min.js"></script> -->
+    <!-- <script src="js/vendor/vendor.min.js"></script>
+    <script src="js/plugins/plugins.min.js"></script> -->
 
     <!-- Main Activation JS -->
-    <script src="assets/js/main.js"></script>
+    <script src="js/main.js"></script>
 
 
 
